:bug: fix: group error transaction
